fix navbar expansion on mobile

--- a/css/Main.css
+++ b/css/Main.css
@@ -46,8 +46,12 @@ html {
 .navbar {
   background: rgb(0,0,0);
   background: radial-gradient(circle, rgba(0,0,0,0.27503501400560226) 0%, rgba(0,0,0,0.7652310924369747) 100%);
+  padding-left: 15px;
 }
 
+.navbar-nav {
+  align-items: center;
+}
 
 /* Text colors */
 .w-color {
